# Embedded-software

./: 0B703-DeBUG-多线程编程.md  0B703-DeBUG-多进程编程.md  0B703-DeBUG-构建主机端开发环境(下).md  0B703-DeBUG-构建主机端开发环境(下.md  0B703-嵌入式DeBug小组-综合应用实验.md  Linux构架目标系统.md  README.md  socket原理以及流程.md
20200420_src/sort/: barrel.h  char2int.h  helloworld  main.c  makefile  myproj  test.c
first-experiment-2020314/ErrorDebug_autotools/: Makefile  Makefile.am  Makefile.in  config.status  program
first-experiment-2020314/ErrorDebug_autotools/.deps/: bin_dec.Po  dec_bin.Po  dec_hex.Po  dec_oct.Po  hex_dec.Po  main.Po  oct_dec.Po
first-experiment-2020314/ErrorDebug_autotools/autom4te.cache/: output.0  requests
first-experiment-2020314/Makefile1/: makefile
first-experiment-2020314/Makefile2/: Makefile
first-experiment-2020314/Makefile3/barrel_sort/: barrel.c  barrel.h  char2int.c  main.c  makefile  myproj
first-experiment-2020314/autotools/: configure  configure.ac  main.c
first-experiment-2020314/autotools/autom4te.cache/: requests  traces.0  traces.1
xh_322/signal/: child  child.c  makefile  parent  parent.c  state.md
xh_322/sort/: barrel.c  main.c  makefile  myproj
xh_322/srv_clt/: client  clienta  clienta.c  clientb  clientb.c  makefile  server  server.c  to
信号量通信/: main-para  main-para.c  seml.c  state.md  web
共享内存通信/: makefile  shmread.c  shmwrite.c  state.md
多线程编程/: mutex_pthread  mutex_pthread.c  state.md
消息队列通信/: .msgreceive.c.swp  msgreceive.c  msgsend.c  state.md
